@@ -1,3 +1,7 @@
+235
+
+- Use annotation file for both traces and logs
+
 234
 
 - Move to Jakarta validation API
